fix overflow chat message

--- a/iphysio-web/src/app/chatroom/chatroom.component.scss
+++ b/iphysio-web/src/app/chatroom/chatroom.component.scss
@@ -51,6 +51,7 @@
     float: left;
     width: 98%;
     margin: 5px 0 0 2%;
+    overflow-wrap: break-word;
   }
 
   .chat-pane {
